--- a/08_Tries/208.ipynb
+++ b/08_Tries/208.ipynb
@@ -21,8 +21,8 @@
    "source": [
     "class TrieNode:\n",
     "    def __init__(self):\n",
-    "        self.children = [None] * 26\n",
-    "        self.end = False\n",
+    "        self.children = [None] * 26 # 26 letters in English alphabet\n",
+    "        self.end = False # True if node represents the end of the word\n",
     "\n",
     "\n",
     "class Trie:\n",
@@ -30,19 +30,19 @@
     "        \"\"\"\n",
     "        Initialize your data structure here.\n",
     "        \"\"\"\n",
-    "        self.root = TrieNode()\n",
+    "        self.root = TrieNode() # root node\n",
     "\n",
     "    def insert(self, word: str) -> None:\n",
     "        \"\"\"\n",
     "        Inserts a word into the trie.\n",
     "        \"\"\"\n",
-    "        curr = self.root\n",
-    "        for c in word:\n",
-    "            i = ord(c) - ord(\"a\")\n",
-    "            if curr.children[i] == None:\n",
-    "                curr.children[i] = TrieNode()\n",
-    "            curr = curr.children[i]\n",
-    "        curr.end = True\n",
+    "        curr = self.root # start from root\n",
+    "        for c in word: # iterate through each character in the word\n",
+    "            i = ord(c) - ord(\"a\") # get the index of the character in the alphabet\n",
+    "            if curr.children[i] == None: # if the character is not in the trie\n",
+    "                curr.children[i] = TrieNode() # create a new node for the character\n",
+    "            curr = curr.children[i] # move to the next node\n",
+    "        curr.end = True # mark the end of the word\n",
     "\n",
     "    def search(self, word: str) -> bool:\n",
     "        \"\"\"\n",
@@ -51,9 +51,9 @@
     "        curr = self.root\n",
     "        for c in word:\n",
     "            i = ord(c) - ord(\"a\")\n",
-    "            if curr.children[i] == None:\n",
+    "            if curr.children[i] == None: # if the character is not in the trie then the word is not in the trie\n",
     "                return False\n",
-    "            curr = curr.children[i]\n",
+    "            curr = curr.children[i] # move to the next node\n",
     "        return curr.end\n",
     "\n",
     "    def startsWith(self, prefix: str) -> bool:\n",
@@ -62,8 +62,8 @@
     "        \"\"\"\n",
     "        curr = self.root\n",
     "        for c in prefix:\n",
-    "            i = ord(c) - ord(\"a\")\n",
-    "            if curr.children[i] == None:\n",
+    "            i = ord(c) - ord(\"a\") \n",
+    "            if curr.children[i] == None: \n",
     "                return False\n",
     "            curr = curr.children[i]\n",
     "        return True"
@@ -91,7 +91,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
    }
   }
  },
