New problems and old fixes

--- a/09_Heap/973.ipynb
+++ b/09_Heap/973.ipynb
@@ -28,10 +28,10 @@
     "        def EuclideanDistance(point, point2):\n",
     "            return hypot(point[0] - point2[0], point[1] - point2[1]) # it's a bit overkill to use hypot here, but it's a good practice\n",
     "\n",
-    "        pts = []\n",
-    "        for point in points:\n",
-    "            pts.append((EuclideanDistance(point, [0, 0]), point))\n",
-    "        pts.sort(key=lambda x: x[0])\n",
+    "        pts = [] # list of tuples (distance, point)\n",
+    "        for point in points: # O(n)\n",
+    "            pts.append((EuclideanDistance(point, [0, 0]), point)) \n",
+    "        pts.sort(key=lambda x: x[0]) # sort by distance, O(nlogn)\n",
     "\n",
     "        return [point for _, point in pts[:k]]"
    ]
