--- a/10_Backtracking/39.ipynb
+++ b/10_Backtracking/39.ipynb
@@ -15,22 +15,24 @@
    "source": [
     "class Solution:\n",
     "    def combinationSum(self, candidates: List[int], target: int) -> List[List[int]]:\n",
-    "        res = []\n",
+    "        res = [] \n",
     "\n",
-    "        def dfs(i, cur, total):\n",
-    "            if total == target:\n",
-    "                res.append(cur.copy())\n",
+    "        # I can see the problem as a tree, where each node is a candidate. Then, I can use backtracking to solve it. In this way, I can avoid the use of a visited array.\n",
+    "\n",
+    "        def dfs(i, cur, total): # i: index, cur: current list, total: current sum\n",
+    "            if total == target: # base case\n",
+    "                res.append(cur.copy()) # add a copy of the current list to the result\n",
     "                return\n",
-    "            if i >= len(candidates) or total > target:\n",
-    "                return\n",
+    "            if i >= len(candidates) or total > target: # base case\n",
+    "                return \n",
     "\n",
-    "            cur.append(candidates[i])\n",
-    "            dfs(i, cur, total + candidates[i])\n",
-    "            cur.pop()\n",
-    "            dfs(i + 1, cur, total)\n",
+    "            cur.append(candidates[i]) # add the current candidate to the current list, so that we can use it in the next iteration\n",
+    "            dfs(i, cur, total + candidates[i]) # call the function recursively, with the same index, because we can use the same candidate multiple times\n",
+    "            cur.pop() # remove the current candidate from the current list, so that we can try the next candidate\n",
+    "            dfs(i + 1, cur, total) # call the function recursively, with the next index, because we can't use the same candidate multiple times \n",
     "\n",
-    "        dfs(0, [], 0)\n",
-    "        return res"
+    "        dfs(0, [], 0) # call the function with the initial values \n",
+    "        return res "
    ]
   }
  ],
@@ -55,7 +57,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
    }
   }
  },
