--- a/10_Backtracking/46.ipynb
+++ b/10_Backtracking/46.ipynb
@@ -32,13 +32,45 @@
     "            nums.append(n) # add the removed element back to the end of the list\n",
     "        return res"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def permute(self, nums: List[int]) -> List[List[int]]:\n",
+    "        res = []\n",
+    "        self.dfs(nums, [], res)\n",
+    "        return res\n",
+    "\n",
+    "    def dfs(self, nums, path, res):\n",
+    "        if not nums:\n",
+    "            res.append(path)\n",
+    "            return\n",
+    "\n",
+    "        for i in range(len(nums)):\n",
+    "            self.dfs(nums[:i] + nums[i+1:], path + [nums[i]], res)"
+   ]
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3.10.6 64-bit",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "name": "python",
+   "version": "3.10.6"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
