--- a/11_Graphs/133.ipynb
+++ b/11_Graphs/133.ipynb
@@ -28,19 +28,19 @@
    "source": [
     "class Solution:\n",
     "    def cloneGraph(self, node: \"Node\") -> \"Node\":\n",
-    "        oldToNew = {}\n",
+    "        oldToNew = {} # key: old node, value: new node\n",
     "\n",
     "        def dfs(node): #cloning functon\n",
-    "            if node in oldToNew:\n",
+    "            if node in oldToNew: \n",
     "                return oldToNew[node]\n",
     "\n",
-    "            copy = Node(node.val)\n",
-    "            oldToNew[node] = copy\n",
+    "            copy = Node(node.val) # create a new node with the same value\n",
+    "            oldToNew[node] = copy # add the new node to the dictionary\n",
     "            for nei in node.neighbors: # for each neighbor of the node we are cloning \n",
-    "                copy.neighbors.append(dfs(nei))\n",
-    "            return copy\n",
+    "                copy.neighbors.append(dfs(nei)) # add the cloned neighbor to the new node neighbors with a recursive call\n",
+    "            return copy # return the new node\n",
     "\n",
-    "        return dfs(node) if node else None"
+    "        return dfs(node) if node else None # if the node is not None, call the cloning function"
    ]
   }
  ],
