--- a/11_Graphs/200.ipynb
+++ b/11_Graphs/200.ipynb
@@ -42,7 +42,7 @@
     "\n",
     "            visit.add((r, c)) # mark as visited\n",
     "            directions = [[0, 1], [0, -1], [1, 0], [-1, 0]]  # right, left, down, up\n",
-    "            for dr, dc in directions: # explore all directions\n",
+    "            for dr, dc in directions: # explore all directions, where dr stands for delta row and dc stands for delta column\n",
     "                dfs(r + dr, c + dc)\n",
     "\n",
     "        for r in range(rows):\n",
