--- a/11_Graphs/417.ipynb
+++ b/11_Graphs/417.ipynb
@@ -25,16 +25,16 @@
     "class Solution:\n",
     "    def pacificAtlantic(self, heights: List[List[int]]) -> List[List[int]]:\n",
     "        ROWS, COLS = len(heights), len(heights[0])\n",
-    "        pac, atl = set(), set()\n",
+    "        pac, atl = set(), set() # set to store the cells that can reach the ocean\n",
     "\n",
     "        def dfs(r, c, visit, prevHeight):\n",
     "            if (\n",
-    "                (r, c) in visit\n",
-    "                or r < 0\n",
-    "                or c < 0\n",
-    "                or r == ROWS\n",
-    "                or c == COLS\n",
-    "                or heights[r][c] < prevHeight\n",
+    "                (r, c) in visit # already visited\n",
+    "                or r < 0 # out of bounds\n",
+    "                or c < 0 # out of bounds\n",
+    "                or r == ROWS # out of bounds since we are using 0 based indexing\n",
+    "                or c == COLS # out of bounds since we are using 0 based indexing\n",
+    "                or heights[r][c] < prevHeight # not a valid path since the height is lower \n",
     "            ):\n",
     "                return\n",
     "                \n",
@@ -44,20 +44,16 @@
     "            dfs(r, c + 1, visit, heights[r][c])\n",
     "            dfs(r, c - 1, visit, heights[r][c])\n",
     "\n",
-    "        for c in range(COLS):\n",
-    "            dfs(0, c, pac, heights[0][c])\n",
-    "            dfs(ROWS - 1, c, atl, heights[ROWS - 1][c])\n",
+    "        for c in range(COLS): # traverse the first row\n",
+    "            dfs(0, c, pac, heights[0][c]) # start dfs from the cell. we are at the pacific ocean. We are going to every position that can reach the pacific ocean\n",
+    "            dfs(ROWS - 1, c, atl, heights[ROWS - 1][c])  # start dfs from the cell. we are at the atlantic ocean. We are going to every position that can reach the atlantic ocean\n",
     "\n",
+    "        # same as above but for the first column, atlantic ocean\n",
     "        for r in range(ROWS):\n",
     "            dfs(r, 0, pac, heights[r][0])\n",
     "            dfs(r, COLS - 1, atl, heights[r][COLS - 1])\n",
     "\n",
-    "        res = []\n",
-    "        for r in range(ROWS):\n",
-    "            for c in range(COLS):\n",
-    "                if (r, c) in pac and (r, c) in atl:\n",
-    "                    res.append([r, c])\n",
-    "        return res"
+    "        return atl.intersection(pac).tolist() # return the intersection of the two sets"
    ]
   }
  ],
