--- a/12_Dynamic_Programmig/1-Dimensional/198.ipynb
+++ b/12_Dynamic_Programmig/1-Dimensional/198.ipynb
@@ -17,11 +17,29 @@
     "    def rob(self, nums: List[int]) -> int:\n",
     "        rob1, rob2 = 0, 0\n",
     "\n",
+    "        # [rob1, rob2, n, n+1, n+2, ...]\n",
     "        for n in nums:\n",
     "            temp = max(n+rob1, rob2)\n",
     "            rob1 = rob2\n",
     "            rob2 = temp\n",
     "        return rob2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def rob(self, nums: List[int]) -> int:\n",
+    "\n",
+    "        dp = [0] * (len(nums) + 2)\n",
+    "        for i in range(len(nums)):\n",
+    "            dp[i + 2] = max(dp[i] + nums[i], dp[i + 1])\n",
+    "        return dp[-1]\n",
+    "\n",
+    "# This is the same thing as above, with worst memory usage. I'll just leave it here since it's a more standard DP solution."
    ]
   }
  ],
@@ -46,7 +64,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
    }
   }
  },
