--- a/12_Dynamic_Programmig/1-Dimensional/213.ipynb
+++ b/12_Dynamic_Programmig/1-Dimensional/213.ipynb
@@ -16,6 +16,7 @@
     "class Solution:\n",
     "    def rob(self, nums: List[int]) -> int:\n",
     "        return max(nums[0], self.helper(nums[1:]), self.helper(nums[:-1]))\n",
+    "        # I compute the max of the first element, the max of the array without the first element, and the max of the array without the last element. I do also the max of the first element because if the array has only one element, I have to return it.\n",
     "\n",
     "    def helper(self, nums):\n",
     "        rob1, rob2 = 0, 0\n",
@@ -41,7 +42,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
    }
   }
  },
