--- a/12_Dynamic_Programmig/1-Dimensional/5.ipynb
+++ b/12_Dynamic_Programmig/1-Dimensional/5.ipynb
@@ -18,7 +18,7 @@
     "        res = \"\"\n",
     "        resLen = 0\n",
     "\n",
-    "        for  i in range(len(s)):\n",
+    "        for i in range(len(s)):\n",
     "            # odd case\n",
     "            l, r = i, i # start from the center\n",
     "            while l >= 0 and r < len(s) and s[l] == s[r]:\n",
@@ -39,7 +39,40 @@
     "                    l -= 1\n",
     "                    r += 1\n",
     "\n",
-    "            return res"
+    "        return res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def longestPalindrome(self, s: str) -> str:\n",
+    "        res = \"\"\n",
+    "        resLen = 0\n",
+    "\n",
+    "        for i in range(len(s)):\n",
+    "            # odd length\n",
+    "            l, r = i, i # start from the center\n",
+    "            while l >= 0 and r < len(s) and s[l] == s[r]: # while we are in bounds and we have a palindrome\n",
+    "                if (r - l + 1) > resLen: # we have a new longest palindrome \n",
+    "                    res = s[l : r + 1]\n",
+    "                    resLen = r - l + 1\n",
+    "                l -= 1\n",
+    "                r += 1\n",
+    "\n",
+    "            # even length, same as before but with the different r\n",
+    "            l, r = i, i + 1 \n",
+    "            while l >= 0 and r < len(s) and s[l] == s[r]:\n",
+    "                if (r - l + 1) > resLen:\n",
+    "                    res = s[l : r + 1]\n",
+    "                    resLen = r - l + 1\n",
+    "                l -= 1\n",
+    "                r += 1\n",
+    "\n",
+    "        return res"
    ]
   }
  ],
