--- a/12_Dynamic_Programmig/1-Dimensional/647.ipynb
+++ b/12_Dynamic_Programmig/1-Dimensional/647.ipynb
@@ -22,13 +22,15 @@
     "            res += self.countPali(s, i, i + 1) #odd ones\n",
     "        return res\n",
     "\n",
-    "    def countPali(self, s, l, r):\n",
+    "    def countPali(self, s, l, r): # The complexity of this function is O(n) where n is the length of the string\n",
     "        res = 0\n",
     "        while l >= 0 and r < len(s) and s[l] == s[r]:\n",
     "            res += 1\n",
     "            l -= 1\n",
     "            r += 1\n",
-    "        return res"
+    "        return res\n",
+    "\n",
+    "# The total complexity of the solution is O(n^2) where n is the length of the string"
    ]
   }
  ],
