--- a/12_Dynamic_Programmig/1-Dimensional/70.ipynb
+++ b/12_Dynamic_Programmig/1-Dimensional/70.ipynb
@@ -32,7 +32,26 @@
     "            dp[i] = dp[i-1] + dp[i-2]\n",
     "        return dp[n]\n",
     "\n",
-    "# it's basically fibonacci sequence\n"
+    "# it's basically fibonacci sequence\n",
+    "# Time: O(n)\n",
+    "# Space: O(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Let's do it in O(1) space\n",
+    "class Solution:\n",
+    "    def climbStairs(self, n: int) -> int:\n",
+    "        if n<= 3:\n",
+    "            return n\n",
+    "        a, b = 1, 2\n",
+    "        for i in range(3, n+1):\n",
+    "            a, b = b, a+b\n",
+    "        return b"
    ]
   }
  ],
@@ -57,7 +76,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
    }
   }
  },
