Some new problems and old fixes

--- a/12_Dynamic_Programmig/1-Dimensional/300.ipynb
+++ b/12_Dynamic_Programmig/1-Dimensional/300.ipynb
@@ -21,7 +21,9 @@
     "            for j in range(i + 1, len(nums)): # loop from i + 1 to the end\n",
     "                if nums[i] < nums[j]: \n",
     "                    LIS[i] = max(LIS[i], 1 + LIS[j]) # update LIS[i] if needed\n",
-    "        return max(LIS)"
+    "        return max(LIS)\n",
+    "\n",
+    "# O(n^2) time, O(n) space"
    ]
   },
   {
@@ -37,12 +39,14 @@
     "    def lengthOfLIS(self, nums: List[int]) -> int:\n",
     "        sub = []\n",
     "        for x in nums:\n",
-    "            if len(sub) == 0 or sub[-1] < x:\n",
+    "            if len(sub) == 0 or sub[-1] < x: # if x is larger than the last element in sub, append x because it is the largest element so far\n",
     "                sub.append(x)\n",
-    "            else:\n",
+    "            else: # if x is smaller than the last element in sub, replace the first element in sub that is larger than x\n",
     "                idx = bisect_left(sub, x)  # Find the index of the smallest number >= x\n",
     "                sub[idx] = x  # Replace that number with x\n",
-    "        return len(sub)"
+    "        return len(sub)\n",
+    "\n",
+    "# Time:  O(nlogn)"
    ]
   }
  ],
