--- a/12_Dynamic_Programmig/2-Dimensional/62.ipynb
+++ b/12_Dynamic_Programmig/2-Dimensional/62.ipynb
@@ -26,13 +26,39 @@
     "\n",
     "            "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# math solution\n",
+    "\n",
+    "# The results is (m+n)!/m!n!\n",
+    "\n",
+    "class Solution:\n",
+    "    def uniquePaths(self, m: int, n: int) -> int:\n",
+    "        return math.factorial(m+n-2)//(math.factorial(m-1)*math.factorial(n-1))"
+   ]
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3.10.6 64-bit",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "name": "python",
+   "version": "3.10.6"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
