IMC questions found on leetcode forums

--- a/00_Miscellanea/IMC/BusyIntersection.ipynb
+++ b/00_Miscellanea/IMC/BusyIntersection.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,12 +37,11 @@
     "    \n",
     "    time = 0 # time is the current time in seconds\n",
     "    idx = 0 # idx is the index of the car that is currently passing through the intersection\n",
-    "    last = 1  # 1st street goes first\n",
-    "    q1, q0 = deque([]), deque([]) \n",
+    "    last = 1  # variable that can be either 0 or 1. 0 means that the last car to pass through the intersection was on the main street. 1 means that the last car to pass through the intersection was on the first street. \n",
+    "    q1, q0 = deque(), deque() \n",
     "    ans = [0] * len(arrival) # ans is the array of integers where ans[i] is the time in seconds that the ith car passes through the intersection\n",
     "    \n",
-    "    while True:\n",
-    "        # no car was moving so need to increase time\n",
+    "    while True: \n",
     "        move = True # we use this variable to check if we need to increase time or not. If we don't increase time, then we need to check if there are any cars that arrive at the same time as the current time\n",
     "\n",
     "        # add cars to queue, same logic below\n",
@@ -92,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
