--- a/leetcode/01_Array_and_Ashing/1.ipynb
+++ b/leetcode/01_Array_and_Ashing/1.ipynb
@@ -24,12 +24,16 @@
    "source": [
     "class Solution:\n",
     "    def twoSum(self, nums: List[int], target: int) -> List[int]:\n",
+    "        # create a map of values to their indices\n",
     "        prevMap = {} # val -> index\n",
     "\n",
     "        for i, n in enumerate(nums):\n",
+    "            # iterate through the list, looking for the complement\n",
     "            diff = target - n\n",
     "            if diff in prevMap:\n",
+    "                # if we find the complement, return the indices\n",
     "                return [prevMap[diff], i]\n",
+    "            # otherwise add the current value to the map\n",
     "            prevMap[n] = i\n"
    ]
   },
