--- a/leetcode/01_Array_and_Ashing/242.ipynb
+++ b/leetcode/01_Array_and_Ashing/242.ipynb
@@ -28,6 +28,13 @@
     "            if countS[c] != countT.get(c, 0):\n",
     "                return False\n",
     "        return True\n",
+    "    \n",
+    "# now with counter\n",
+    "from collections import Counter\n",
+    "\n",
+    "class Solution:\n",
+    "    def isAnagram(self, s: str, t: str) -> bool:\n",
+    "        return Counter(s) == Counter(t)\n",
     "        "
    ]
   }
