--- a/leetcode/01_Array_and_Ashing/347.ipynb
+++ b/leetcode/01_Array_and_Ashing/347.ipynb
@@ -28,6 +28,11 @@
     "        # time: O(n)\n",
     "        # space: O(n)\n",
     "        # Let's use an hashmap to store the frequency of each number.\n",
+    "        # Then we can use bucket sort to sort the number by frequency.\n",
+    "        # We create a list of buckets to store the numbers with the same frequency.\n",
+    "        # The index of the list represents the frequency of the number.\n",
+    "        # For example, freq[2] = [1,2,3] means number 1,2,3 appear 2 times in the list.\n",
+    "        # We can then get the top k frequent number by iterating the list backwards.\n",
     "\n",
     "        count ={}\n",
     "        freq = [[] for i in range(len(nums)+1)]\n",
@@ -43,6 +48,21 @@
     "                res.append(n)\n",
     "                if len(res) == k:\n",
     "                    return res        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import Counter\n",
+    "\n",
+    "class Solution:\n",
+    "    def topKFrequent(self, nums: List[int], k: int) -> List[int]:\n",
+    "\n",
+    "        hashset = Counter(nums)\n",
+    "        return [i[0] for i in hashset.most_common(k)]\n"
    ]
   }
  ],
