--- a/leetcode/01_Array_and_Ashing/49.ipynb
+++ b/leetcode/01_Array_and_Ashing/49.ipynb
@@ -56,6 +56,17 @@
     "        for word in strs:\n",
     "            tmp = []\n",
     "            tmp.append(word)\n",
+    "\n",
+    "            for word2 in strs:\n",
+    "                if word != word2 and sorted(word) == sorted(word2):\n",
+    "                    tmp.append(word2)\n",
+    "                    strs.remove(word2)\n",
+    "\n",
+    "            res.append(tmp)\n",
+    "\n",
+    "        return res\n",
+    "    \n",
+    "\n",
     "            \n",
     "\n",
     "            \n",
