--- a/leetcode/02_Two_Pointers/11.ipynb
+++ b/leetcode/02_Two_Pointers/11.ipynb
@@ -24,12 +24,18 @@
    "source": [
     "class Solution:\n",
     "    def maxArea(self, height: List[int]) -> int:\n",
+    "        # initialize the left and right pointer\n",
     "        left, right = 0, len(height) - 1\n",
+    "        # initialize the maximum area\n",
     "        max_area = 0\n",
+    "        # loop until left pointer meets right pointer\n",
     "        while left < right:\n",
-    "            max_area = max(max_area, min(height[left], height[right]) * (right - left))\n",
+    "            # update the maximum area\n",
+    "            max_area = max(max_area, min(height[left], height[right]) * (right - left)) \n",
+    "            # move the left pointer to right if left pointer is shorter than right pointer\n",
     "            if height[left] < height[right]:\n",
     "                left += 1\n",
+    "            # otherwise, move the right pointer to left\n",
     "            else:\n",
     "                right -= 1\n",
     "        return max_area\n"
