--- a/leetcode/01_Array_and_Ashing/128.ipynb
+++ b/leetcode/01_Array_and_Ashing/128.ipynb
@@ -24,16 +24,21 @@
    "source": [
     "class Solution:\n",
     "    def longestConsecutive(self, nums: List[int]) -> int:\n",
+    "        # Convert the list to a set to remove duplicates\n",
     "        nums = set(nums)\n",
     "        longest = 0\n",
+    "        # Iterate through the numbers\n",
     "        for num in nums:\n",
+    "            # If the current number is the start of a sequence\n",
     "            if num - 1 not in nums:\n",
+    "                # Set the current number as the start of the sequence\n",
     "                curr = num\n",
+    "                # Iterate through the sequence until the next number isn't in the set\n",
     "                while curr + 1 in nums:\n",
     "                    curr += 1\n",
+    "                # Update the longest sequence length if necessary\n",
     "                longest = max(longest, curr - num + 1)\n",
-    "        return longest\n",
-    "\n"
+    "        return longest"
    ]
   }
  ],
