small modifications and new problems

--- a/leetcode/03_Sliding_Window/121.ipynb
+++ b/leetcode/03_Sliding_Window/121.ipynb
@@ -35,6 +35,23 @@
     "        return res\n",
     "        "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from itertools import combinations\n",
+    "\n",
+    "class Solution:\n",
+    "    def maxProfit(self, prices: List[int]) -> int:\n",
+    "        res = 0\n",
+    "        for l, r in combinations(range(len(prices)), 2):\n",
+    "            res = max(res, prices[r] - prices[l])\n",
+    "\n",
+    "        return res"
+   ]
   }
  ],
  "metadata": {
