--- a/leetcode/05_Binary_Search/74.ipynb
+++ b/leetcode/05_Binary_Search/74.ipynb
@@ -41,10 +41,7 @@
     "\n",
     "       for row in matrix:\n",
     "            if row[-1] >= target:\n",
-    "                if self.binary_search(row, target):\n",
-    "                    return True\n",
-    "                else:\n",
-    "                    return False\n"
+    "                return self.binary_search(row, target)\n"
    ]
   }
  ],
