--- a/leetcode/09_Heap/1046.ipynb
+++ b/leetcode/09_Heap/1046.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,18 +31,17 @@
     }
    ],
    "source": [
-    "# Solution using a MaxHeap, every time that we need to take the max element, it;s O(logn) and we do it n times, so the complexity is O(nlogn)\n",
     "\n",
     "class Solution:\n",
     "    def lastStoneWeight(self, stones: List[int]) -> int:\n",
     "        stones = [-s for s in stones] # trick to use a max heap since heapq only supports min heaps\n",
     "        heapq.heapify(stones) # O(len(stones)) in time\n",
     "\n",
-    "        while len(stones) > 1: \n",
-    "            first = heapq.heappop(stones)\n",
-    "            second = heapq.heappop(stones)\n",
+    "        while len(stones) > 1: # O(n) in time\n",
+    "            first = heapq.heappop(stones) # O(logn) in time\n",
+    "            second = heapq.heappop(stones) # O(logn) in time\n",
     "            if second > first: ## attention to the sign, we are using a max heap\n",
-    "                heapq.heappush(stones, first - second)\n",
+    "                heapq.heappush(stones, first - second) # O(logn) in time\n",
     "\n",
     "        stones.append(0) # edge case: what if stone was empty?\n",
     "        return abs(stones[0]) # we need to go back to natural numbers\n",
