--- a/leetcode/10_Backtracking/78.ipynb
+++ b/leetcode/10_Backtracking/78.ipynb
@@ -23,14 +23,16 @@
     "\n",
     "        def dfs(i): # idex of the value we are making a decision on\n",
     "            if i >= len(nums): # we have reached the end of the list\n",
-    "                res.append(subset.copy)\n",
-    "                return \n",
+    "                res.append(subset.copy) # base case, add the subset to the result\n",
+    "                return # backtrack\n",
+    "            \n",
     "            # include nums[i]\n",
     "            subset.append(nums[i]) # left branch\n",
     "            dfs(i+1) \n",
     "            # exclude nums[i]\n",
     "            subset.pop() # right branch\n",
     "            dfs(i+1)\n",
+    "            \n",
     "        dfs(0)\n",
     "        return res"
    ]
