--- a/leetcode/05_Binary_Search/875.ipynb
+++ b/leetcode/05_Binary_Search/875.ipynb
@@ -9,16 +9,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import List"
+    "from typing import List\n",
+    "import math"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,9 +31,7 @@
     "        while l <= r:\n",
     "            m = (l + r) // 2\n",
     "\n",
-    "            totalTime = 0\n",
-    "            for p in piles:\n",
-    "                totalTime += ((p - 1) // m) + 1\n",
+    "            totalTime = sum([math.ceil(p / m) for p in piles])\n",
     "            if totalTime <= h:\n",
     "                k = m\n",
     "                r = m - 1\n",
@@ -58,7 +57,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
